@@ -90,6 +90,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-28 ven. 02:47]--[2016-10-28 ven. 03:34] =>  0:47
      CLOCK: [2016-10-27 jeu. 00:06]--[2016-10-27 jeu. 00:59] =>  0:53
      CLOCK: [2016-10-26 mer. 02:11]--[2016-10-26 mer. 02:31] =>  0:20
      CLOCK: [2016-10-26 mer. 01:12]--[2016-10-26 mer. 01:57] =>  0:45
@@ -175,7 +176,17 @@
   Possibly with a parameter : unimplemented feature
   - [X] Create a new layout NyiDialog.layout
   - [X] Try this layout until it works
-  - [ ] Make this a real class with the featurename parameter
+  - [-] Make this a real class with the featurename parameter
+    Maybe with Dialog super class that could handle the layout file loading
+    and the event mappers (Ok/Cancel buttons)
+    - [X] Can the layout name be a simple std::string?  Yes
+    - [X] List the Ogre/CEGUI things we need to create the dialog
+      CEGUI::WindowManager *wmgr = CEGUI::WindowManager::getSingletonPtr();
+      the CEGUI root window (Maybe with GUIContext::getRootWindow();)
+    - [X] First, implement in a simple window
+    - [ ] Then handle the visibility
+      with show(), hide() and isVisible() function
+    - [ ] We should handle the Ok button callback (simply hide this)
   - [ ] Try to use styled text to  emphasis the featurename
 - [ ] Try to use the 'FetteUNZFraktur' font from the CEGUI demo
 - [ ] These is (again) a segfault when cancel the Ogre3D config dialog
